--- a/api/package.json
+++ b/api/package.json
@@ -26,15 +26,16 @@
     "models": "https://github.com/adamjberg/coyou-models",
     "mongoose": "^4.11.11",
     "morgan": "^1.8.2",
+    "pm2": "^2.7.0",
     "typescript": "^2.5.2",
     "watch": "^1.0.2"
   },
   "scripts": {
     "build": "tsc",
     "build:w": "tsc -w",
-    "dev": "concurrently 'yarn run build:w' 'yarn run test:w' 'yarn run start:w'",
+    "dev": "concurrently 'yarn run build:w && yarn run start:w' 'yarn run test:w'",
     "start": "node built/api.js",
-    "start:w": "watch --wait=10 --interval=5 'node built/api.js' built/",
+    "start:w": "pm2 startOrReload ecosystem.config.js",
     "test": "jasmine --config=jasmine.json",
     "test:w": "watch --wait=10 --interval=5 'jasmine --config=jasmine.json' built"
   }
