Add source for yarn to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,8 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
+      - sourceline: 'deb https://dl.yarnpkg.com/debian/ stable main'
+        key_url: 'https://dl.yarnpkg.com/debian/pubkey.gpg'
     packages:
       - g++-4.8
+      - yarn
