--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,20 @@ node_js:
   - "8"
 
 cache:
-  yarn: true
   directories:
     - node_modules
 
 install:
-  - yarn install
+  - npm install
 
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - yarn run build
-  - yarn run start
+  - npm run build
+  - npm run start
 
 test:
-  - yarn test
+  - npm test
 
 env:
   - CXX=g++-4.8
@@ -31,8 +30,5 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
-      - sourceline: 'deb https://dl.yarnpkg.com/debian/ stable main'
-        key_url: 'https://dl.yarnpkg.com/debian/pubkey.gpg'
     packages:
       - g++-4.8
-      - yarn
