--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,24 @@ node_js:
   - "8"
 
 cache:
+  yarn: true
   directories:
     - node_modules
 
+before_install:
+  - npm i -g yarn
+
 install:
-  - npm install
+  - yarn install
 
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm run build
-  - npm run start
+  - yarn run build
+  - yarn run start
 
 test:
-  - npm test
+  - yarn test
 
 env:
   - CXX=g++-4.8
