Add lint to api / modesl

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,6 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/built": true
-        //"**/node_modules": true
+        "**/node_modules": true
     }
 }
