--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "concurrently 'yarn --cwd coyou-app/ start' 'yarn --cwd api/ start'",
     "test": "concurrently 'yarn --cwd coyou-app/ test' 'yarn --cwd api/ test' 'yarn --cwd models/ test'",
     "test:w": "concurrently 'yarn --cwd coyou-app/ run test:w' 'yarn --cwd api/ run test:w' 'yarn --cwd models/ run test:w'",
-    "postinstall": "yarn --cwd coyou-app/ install && yarn --cwd api/ install && yarn --cwd models/ install'",
+    "postinstall": "yarn --cwd coyou-app/ install && yarn --cwd api/ install && yarn --cwd models/ install",
     "lint": "concurrently 'yarn --cwd coyou-app/ lint' 'yarn --cwd api/ lint' 'yarn --cwd models/ lint'"
   },
   "dependencies": {
