--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "scripts": {
     "build": "concurrently 'yarn --cwd coyou-app/ run build' 'yarn --cwd api/ run build' 'yarn --cwd models/ run build'",
     "build:w": "concurrently 'yarn --cwd coyou-app/ run build:w' 'yarn --cwd api/ run build:w' 'yarn --cwd models/ run build:w'",
+    "dev": "concurrently 'yarn --cwd coyou-app/ dev' 'yarn --cwd api/ dev' 'yarn --cwd models/ dev'",
     "start": "concurrently 'yarn --cwd coyou-app/ start' 'yarn --cwd api/ start'",
-    "test": "concurrently 'yarn --cwd coyou-app/ test' 'yarn --cwd api/ test' 'yarn --cwd models/ test'",
+    "test": "concurrently 'yarn --cwd api/ test' 'yarn --cwd coyou-app/ test' 'yarn --cwd models/ test'",
     "test:w": "concurrently 'yarn --cwd coyou-app/ run test:w' 'yarn --cwd api/ run test:w' 'yarn --cwd models/ run test:w'",
     "postinstall": "yarn --cwd coyou-app/ install && yarn --cwd api/ install && yarn --cwd models/ install",
     "lint": "concurrently 'yarn --cwd coyou-app/ lint' 'yarn --cwd api/ lint' 'yarn --cwd models/ lint'"
