--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ install:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - yarn build
+  - yarn --cwd api/ build
+  - yarn --cwd models/ build
 
 test:
   - yarn test
