--- a/coyou-app/package.json
+++ b/coyou-app/package.json
@@ -26,9 +26,13 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/jquery": "^3.2.15",
+    "bootstrap": "^3.3.7",
     "concurrently": "^3.5.0",
     "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
     "models": "https://github.com/adamjberg/coyou-models",
+    "ngx-bootstrap": "^1.9.3",
     "rxjs": "^5.4.2",
     "watch": "^1.0.2",
     "zone.js": "^0.8.14"
