--- a/coyou-app/package.json
+++ b/coyou-app/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "concurrently 'yarn start' 'yarn test:w'",
+    "dev": "concurrently 'yarn start' 'yarn test:ang:w'",
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "build:p": "ng build --prod",
     "test": "concurrently 'yarn run test:ang' 'yarn startAndTest:e2e'",
     "test:ang": "ng test --single-run",
-    "test:ang:w": "ng test",
+    "test:ang:w": "ng test --sourcemaps=false",
     "test:e2e": "ng e2e -s false",
     "startAndTest:e2e": "concurrently -k -s 'first' 'yarn start' 'sleep 15 && yarn run test:e2e'",
     "lint": "ng lint --type-check --fix"
@@ -38,24 +38,24 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.1",
+    "@angular/cli": "1.4.7",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
-    "@types/jasmine": "~2.5.53",
+    "@types/jasmine": "~2.6.0",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.1.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
+    "@types/node": "~8.0.44",
+    "codelyzer": "~3.2.1",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "protractor": "~5.2.0",
+    "ts-node": "~3.3.0",
+    "tslint": "~5.7.0",
+    "typescript": "~2.5.3"
   }
 }
