--- a/coyou-app/tsconfig.json
+++ b/coyou-app/tsconfig.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
