--- a/coyou-app/tsconfig.json
+++ b/coyou-app/tsconfig.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    //"noUnusedLocals": true,
+    //"noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "declaration": false,
     "moduleResolution": "node",
